jerry-core/parser/js/new-parser/tests/js/lexer/regexp-unknown-flag.js
/* This test contains regexp literal parser tests. */

/\/*/ig;	/\/*/ig5
